# im-rust

./: Cargo.toml
src/: main.rs
src/config/: log4rs.yaml
src/constant/: errors.rs
src/service/account/: mod.rs  register.rs  request.rs  sign.rs  user.rs
src/utils/: db.rs  errors.rs  mod.rs  orm.rs  server_error.rs
