[package]
edition = "2021"
name = "im-rust"
version = "0.1.0"
[features]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
chrono = "*"
clap = "~2.33"
env_logger = "0.7.1"
failure = "0.1"
log = "0.4"
log4rs = "1.0"
mysql = "22.1.0"
rand = "0.4.6"
rust-crypto = "^0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
tokio = {version = "1.18.2", features = ["full"]}
websocket = "0.26.4"
# lazy_static = "*"
once_cell = "*"
# yew = "*"
sled = "*"
anyhow = "*"